--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.5.3
   go_router: ^17.0.0
   flutter_local_notifications: ^19.5.0
+  audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
