--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^17.0.0
   flutter_local_notifications: ^19.5.0
   audioplayers: ^6.5.1
+  flutter_svg: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/sounds/alarm.mp3
+    - assets/sounds/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
