--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/sounds/
+    - assets/sounds/alarm.mp4
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
