--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   audioplayers: ^6.5.1
   flutter_svg: ^2.2.2
+  flutter_background: ^1.3.0+1
 
 dev_dependencies:
   flutter_test:
